Update 'qqx945taj-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:605c4c0ec6e1ce5886f57677f737349d146f3250@sha256:7f2093031a2e51a5b848a0676cfbc82e73571522d10c9274bfa078ff4e0d7b34

--- a/components/qqx945taj-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/qqx945taj-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qqx945taj-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:605c4c0ec6e1ce5886f57677f737349d146f3250@sha256:7f2093031a2e51a5b848a0676cfbc82e73571522d10c9274bfa078ff4e0d7b34
+          name: container-image
